Add credits and winning combinations

--- a/index.html
+++ b/index.html
@@ -64,6 +64,10 @@
       opacity: 0.5;
       cursor: not-allowed;
     }
+    #credits {
+      margin-top: 10px;
+      font-size: 1.2rem;
+    }
     #result {
       font-size: 2rem;
       margin-top: 20px;
@@ -72,6 +76,7 @@
 </head>
 <body>
   <h1>Lucky Seven Game</h1>
+  <div id="credits">Credits: 100</div>
   <div class="reels-container">
     <div class="reel" id="reel1">
       <div class="reel-inner"></div>
