--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Lucky Seven Game - Reels</title>
+  <title>Lucky Seven Machine</title>
   <style>
     /* Dark background and centered content */
     body {
-      background-color: #121212;
+      background: radial-gradient(circle at center, #2d0e37, #000);
       color: #ffffff;
       font-family: Arial, sans-serif;
       display: flex;
@@ -23,6 +23,11 @@
     .reels-container {
       display: flex;
       gap: 1rem;
+      padding: 20px;
+      border: 4px solid #444;
+      border-radius: 10px;
+      background-color: #1e1e1e;
+      box-shadow: 0 0 10px #000;
     }
     /* Reel container with fixed height and overflow hidden */
     .reel {
@@ -31,8 +36,9 @@
       overflow: hidden;
       border: 2px solid #444;
       border-radius: 5px;
-      background-color: #1e1e1e;
+      background-color: #000;
       perspective: 1000px;
+      box-shadow: inset 0 0 5px #555;
     }
     /* Inner container that will be animated */
     .reel-inner {
@@ -43,7 +49,7 @@
       height: 80px;
       line-height: 80px;
       text-align: center;
-      font-size: 3rem;
+      font-size: 3.5rem;
     }
     button {
       background-color: #1e1e1e;
@@ -55,6 +61,7 @@
       margin-top: 20px;
       border-radius: 5px;
       transition: background-color 0.3s ease;
+      box-shadow: 0 0 5px #000;
     }
     button:hover {
       background-color: #333;
@@ -75,7 +82,7 @@
   </style>
 </head>
 <body>
-  <h1>Lucky Seven Game</h1>
+  <h1>Lucky Seven Machine</h1>
   <div id="credits">Credits: 100</div>
   <div class="reels-container">
     <div class="reel" id="reel1">
@@ -88,7 +95,7 @@
       <div class="reel-inner"></div>
     </div>
   </div>
-  <button id="playButton">Play</button>
+  <button id="playButton">Spin</button>
   <div id="result"></div>
 
   <!-- Import the module and run the game -->
